src/assets/scss/core/_misc.scss
html * {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  // scroll-behavior: smooth;
}
body {
  font-size: 1rem;
}
body,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "ProximaNova", "Roboto", "Helvetica", "Arial", sans-serif;
  font-weight: 300;
  line-height: 1.5em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: inherit;
}
h1,
h2,
h3 {
  margin-top: 20px;
  margin-bottom: 10px;
}
h4,
h5,
h6 {
  margin-top: 10px;
  margin-bottom: 10px;
}
h1 {
  font-size: 3.3125rem;
  line-height: 1.15em;

  @media (max-width: 767px) {
    font-size: 2.8rem;
  }
}
h2 {
  font-size: 2.25rem;
  line-height: 1.5em;
}
h3 {
  font-size: 1.5625rem;
  line-height: 1.4em;
}
h4 {
  font-size: 1.125rem;
  line-height: 1.5em;
}
h5 {
  font-size: 1.0625rem;
  line-height: 1.55em;
}
h6 {
  font-size: 0.75rem;
  text-transform: uppercase;
  font-weight: 500;
}
p {
  font-size: 14px;
  margin: 0 0 10px;
}
html {
  font-family: sans-serif;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -ms-overflow-style: scrollbar;
  -webkit-tap-highlight-color: transparent;
}
body {
  background-color: #e5e5e5;
  color: $black-color;
  margin: 0;
  font-size: 1rem;
  text-align: left;
}

legend {
  border-bottom: 0;
}

// Prevent highlight on mobile
* {
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  &:focus {
    outline: 0;
  }
}

a {
  color: $link-color;
  text-decoration: none;
  background-color: transparent;
  &:hover,
  &:focus {
    color: darken($link-color, 5%);
    text-decoration: none;
  }
}

label {
  font-size: 14px;
  line-height: 1.42857;
  color: $checkboxes-text-color;
  font-weight: 400;
}
small {
  font-size: 75%;
  color: #777;
  font-weight: 400;
}
img {
  vertical-align: middle;
  border-style: none;
}
form {
  margin-bottom: 1.125rem;
}
.white {
  a {
    color: inherit;
    // text-transform: to-lower-case;
  }
}
.black {
  a {
    color: inherit;
  }
}
.subtext {
  padding-left: 8px;
  font-size: 12px;
}
.linkScroll {
  color: white;
  &:hover {
    color: darken(white, 15%);
  }
  @media (max-width: 767px) {
    display: none;
  }
}
.cardItem1 {
  // min-height: 480px;
  padding: 2.9em 55px 2.5em;
  color: black;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem2 {
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: black;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem3 {
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: black;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem4 {
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: black;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem1hover {
  background-color: #2b7fbe;
  // min-height: 480px;
  padding: 2.9em 55px 2.5em;
  color: white;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem2hover {
  background-color: #27afda;
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: white;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem3hover {
  background-color: #46aa54;
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: white;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
.cardItem4hover {
  background-color: #ffb852;
  min-height: 381px;
  padding: 2.9em 55px 4.5em;
  color: white;
  border: solid 1px #ededed;
  border-radius: 5px;
  @media (max-width: 767px) {
    padding: 10px;
  }
}
$animate: all 0.2s ease-in-out;
#examples {
  opacity: 0.95;
  // padding: 15px;
  // margin: 0 auto 30px;
  [class*="HeaderLinks-listItem"] {
    padding: 0 5px 0 0;
    // margin: 0 0 45px;
    // display: inline-block;
    .hover {
      // display: inline-block;
      font-size: 0.9rem;
      margin: 0 auto;
      padding: 0;
      transition: $animate;
      position: relative;
      &:before,
      &:after {
        content: "";
        position: absolute;
        bottom: -8px;
        width: 0px;
        height: 3px;
        margin: 3px 0 0;
        transition: $animate;
        transition-duration: 0.55s;
        opacity: 0;
        background-color: darken(white, 5%);
      }
      &.hover-1 {
        color: inherit;
        &:before,
        &:after {
          left: 0;
        }
      }
    }
    &:hover {
      cursor: pointer;
      .hover {
        &:before,
        &:after {
          width: 100%;
          opacity: 1;
        }
      }
    }
  }
}
.serviceImage {
  width: 700px;
  float: right;
  @media (max-width: 767px) {
    display: none;
  }
}
.geekImage {
  // padding: 9vh, 0, 0, 40vw;
  // padding-left: 10vw;
  // position: absolute;
  width: 30vw;
  // float: right;
  // bottom: 0;
  // right: 0;
  @media (max-width: 767px) {
    display: none;
  }
}
.workImage {
  width: 95vw;
}
.hireUsButton {
  border-radius: 24px;
  background-color: rgba(255, 255, 255, 0.1);
}
.titleResponsive {
  padding-left: 20px;
  color: white;
  font-size: 3.8rem;
  font-weight: 450;
  position: relative;
  z-index: 1;
  @media (max-width: 767px) {
    font-size: 3.1rem;
  }
}

.subtitleResponsive {
  padding-left: 20px;
  font-weight: 400;
  color: white;
  font-size: 1.6rem;
  margin: 10px 0 0;
  position: relative;
  z-index: 1;
  max-width: 65vw;
  @media (max-width: 767px) {
    font-size: 1.3rem;
    max-width: 100vw;
  }
}
.noDisplay {
  @media (max-width: 767px) {
    display: none;
  }
}

.loading-dots {
  padding-left: 2px;
  // display: inline;
  // text-align: center;
  height: 5px;
  // z-index: 5;

  .dot {
    position: relative;
    top: -0.9em;
    font-size: 4em;
    letter-spacing: -4px;
    opacity: 0;
    animation: showHideDot 2.5s ease-in-out infinite;

    &.one {
      animation-delay: 0.2s;
    }
    &.two {
      animation-delay: 0.4s;
    }
    &.three {
      animation-delay: 0.6s;
    }
  }
}

@keyframes showHideDot {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  60% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.iConDown {
  padding-right: 8px;
  width: 20px;
  // height: 20px;
  color: white;
  // display: inline-block;
  // -webkit-animation: ItemUpDown 0.85s infinite alternate;
  animation: ItemUpDown 0.85s infinite alternate;
  transition: transform 0.2s;
}
@keyframes ItemUpDown {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-7px);
  }
}

// .SectionBasics-card1-275 {
//   &:hover {
//     perspective: 1500px;
//     transform-style: preserve-3d;
//     background-color: rgb(30, 175, 218);
//     color: rgb(0, 0, 0);
//     animation: card 0 fa;
//     transform: rotateY(-30deg) RotateX(-20deg);
//   }
// }

// @keyframes card {
//   0% {
//     transform: rotateY(0) RotateX(0);
//     // background-color: rgb(255, 255, 255);
//   }
//   100% {
//     background-color: rgb(30, 175, 218);
//     transform: rotateY(-11.15deg) RotateX(-6.13333deg);
//   }
// }

// .linkWrapper {
//   // background: #edf2f4;
//   // padding: 1.1em 15px;
//   perspective: 1000px;
//   transform-style: preserve-3d;
//   // display: flex;

.cardx {
  a {
    &:hover {
      border: 3px solid red;
      color: red;
      background-color: red;
    }
  }
}

.card {
  min-height: 480px;
  padding: 2.9em 55px 4.5em;
  color: black;
  border: solid 1px #ededed;
  border-radius: 5px;
  pointer-events: none;
  transform: translateZ(0);
  // padding: 30px;
  // background: white;
  border-radius: 5px;
  // width: 400px;
  // height: 200px;
  // margin: auto;
  transform-style: preserve-3d;
  backface-visibility: hidden;
  display: flex;
  // box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  position: relative;

  &:after {
    content: " ";
    position: absolute;
    width: 100%;
    height: 10px;
    border-radius: 50%;
    left: 0;
    bottom: -50px;
    // box-shadow: 0 30px 20px rgba(0, 0, 0, 0.3);
  }

  .card-content {
    min-height: 480px;
    padding: 2.9em 55px 4.5em;
    color: black;
    border: solid 1px #ededed;
    border-radius: 5px;
    margin: auto;
    // text-align: center;
    transform-style: preserve-3d;
  }
}
// }

#examples2 {
  opacity: 0.95;
  padding: 15px 30px;
  margin: 0 auto 30px;
  .example2 {
    padding: 0 12px 0 0;
    margin: 0 0 45px;
    display: inline-block;
    .hover2 {
      @media (max-width: 767px) {
        font-size: 1.3rem;
      }
      display: inline-block;
      font-size: 1.8em;
      font-weight: 400;
      margin: 0 auto;
      padding: 0;
      transition: $animate;
      position: relative;
      &:before,
      &:after {
        content: "";
        position: absolute;
        bottom: -8px;
        width: 0px;
        height: 3px;
        margin: 3px 0 0;
        transition: $animate;
        transition-duration: 0.55s;
        opacity: 0;
        background-color: darken(white, 5%);
      }
      &.hover-12 {
        color: white;
        &:before,
        &:after {
          left: 0;
        }
      }
    }
    &:hover {
      cursor: pointer;
      .hover2 {
        &:before,
        &:after {
          width: 100%;
          opacity: 1;
        }
      }
    }
  }
}

